完成了普攻和basic attack两个技能，停用了controller

--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
+    "@minecraft/math": "^2.0.1",
     "@minecraft/server": "^1.13.0",
-    "@minecraft/server-ui": "^1.2.0"
+    "@minecraft/server-ui": "^1.2.0",
+    "@minecraft/vanilla-data": "^1.21.20"
   }
 }
